--- a/themes/default/css/main-white.css
+++ b/themes/default/css/main-white.css
@@ -26,6 +26,11 @@ background-color:#ffffff;
   width: 50px;
   margin-bottom: 0 !important;
 }
+.input-medium {
+  width: 150px;
+  margin-bottom: 0 !important;
+}
+
 textarea:focus,
 input[type="text"]:focus,
 input[type="password"]:focus,
