inserito colore di background nello help-text-container

--- a/themes/default/css/custom.css
+++ b/themes/default/css/custom.css
@@ -8,7 +8,7 @@ and open the template in the editor.
     Author     : francesco
 */
 .help-text-container{
-    
+    backgound-color:#ffffff;
 }
 .help-text{
     color:#ababab;
