--- a/themes/default/css/custom.css
+++ b/themes/default/css/custom.css
@@ -8,7 +8,8 @@ and open the template in the editor.
     Author     : francesco
 */
 .help-text-container{
-    backgound-color:#ffffff;
+    background-color:#ffffff;
+    
 }
 .help-text{
     color:#ababab;
